--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/devtools": "^7.0.11",
     "@react-navigation/native": "^7.0.9",
     "@reduxjs/toolkit": "^2.4.0",
+    "@types/i18n-js": "^3.8.9",
     "axios": "^1.7.8",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
@@ -34,15 +35,22 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "formik": "^2.4.6",
+    "i": "^0.3.7",
+    "i18n-js": "3.9.2",
     "i18next": "^24.0.2",
+    "npm": "^10.9.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.1.2",
     "react-native": "0.76.3",
     "react-native-animated-spinkit": "^1.5.2",
+    "react-native-config": "^1.5.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-localize": "^3.3.0",
     "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^5.2.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.16.3",
@@ -58,7 +66,8 @@
     "react-navigation-tabs": "^2.11.2",
     "react-redux": "^9.1.2",
     "react-yandex-maps": "^4.6.0",
-    "yandex-maps-react": "^1.0.3"
+    "yandex-maps-react": "^1.0.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
